# py-spriteforhtml

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
src/sprite-generator/: __main__.py
src/sprite_generator/: __main__.py  create.py
src/sprite_generator/data/: sprite.json
src/spriteforhtml/: __main__.py  _overlapping.py  _sort.py  create.py
src/spriteforhtml/data/: sprite.json
tests/: unit.py
