[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-generator"
version = "0.0.1"
authors = [
  { name="Pascal Brand", email="pascal.brand38@gmail.com" },
]
description = "A sprite generator, as png and webp, also providing associated .css file"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pascal-brand38/py-sprite-generator"
"Bug Tracker" = "https://github.com/pascal-brand38/py-sprite-generator/issues"
